fix: fixes missing secret reference
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/pangolin-newt/release.yaml
+++ b/deployment/apps/pangolin-newt/release.yaml
@@ -259,7 +259,7 @@ spec:
         # Preferred: use an existing Secret to source all credentials
         auth:
           # -- Name of the existing Secret with endpoint/id/secret keys
-          existingSecretName: ""
+          existingSecretName: "newt-pangolin-secret"
           # -- Key mappings used inside the existing Secret
           keys:
             # -- Key name for the Pangolin endpoint (default: PANGOLIN_ENDPOINT)
