fix: enables newt
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/pangolin-newt/release.yaml
+++ b/deployment/apps/pangolin-newt/release.yaml
@@ -21,7 +21,7 @@ spec:
     #
     # NOTE: The comments in this file are consumed by helm-docs to generate the README.md
     # See https://github.com/norwoodj/helm-docs
-
+    enabled: true
     ## @section Global parameters
     global:
       # -- Global Docker image settings for all components in the Helm chart
