fix: disables schema validation
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/pangolin-newt/release.yaml
+++ b/deployment/apps/pangolin-newt/release.yaml
@@ -14,6 +14,10 @@ spec:
         kind: HelmRepository
         name: pangolin-newt
         namespace: flux-system
+  install:
+    disableSchemaValidation: true
+  upgrade:
+    disableSchemaValidation: true
   values:
     # Default values for Newt.
     # This is a YAML-formatted file.
